<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_screen_title">Welcome to Shoe Store</string>
    <string name="login_email_address">your Login Email</string>
    <string name="email_field_label">Email</string>
    <string name="password_field_label">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="signup_btn_text">SignUp</string>
    <string name="password_field_hint">your Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_proceeed_to_instructions_screen">Please proceeed to Instructions Screen</string>
    <string name="welcome_screen_button_text">Proceed</string>
    <string name="instruction_button_text">Proceed to Shoe List</string>
    <string name="instructions">"1. Press the \"Proceed to Shoe List\" button to go to the shoe list button.
\n2. In the \"show list\" screen:
\n    * you can browse available shoes.
\n    * or you can press the \"Details\" button to add a new shoe.
\n3. In the \"Details\" screen:
\n    * you can add a new shoe.
\n    * or press the \"logout\" menu option to leave the App.



"</string>
    <string name="logout_menu_item">Logout</string>
    <string name="add_shoe">Add a new Shoe</string>
    <string name="list_of_shoes_scrollview">List of Shoes</string>
    <string name="save_btn_text">Save Shoe</string>
    <string name="cancel_btn_text">Cancel</string>
</resources>
