<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/textView3"
            style="@style/style_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login_screen_title" />

        <TextView
            android:id="@+id/textView4"
            style="@style/style_screen_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:text="@string/please_proceeed_to_instructions_screen"
            android:textSize="35sp" />

        <Button
            android:id="@+id/welcome_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/welcome_screen_button_text"
            android:textSize="25sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>