<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toEndOf="@+id/login_button">

        <TextView
            android:id="@+id/login_layout_title"
            style="@style/style_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login_screen_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="173dp"
            tools:layout_conversion_absoluteWidth="411dp" />

        <TextView
            android:id="@+id/email_field_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/email_field_label"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/email_field_edittext"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_layout_title"
            tools:layout_conversion_absoluteHeight="34dp"
            tools:layout_conversion_absoluteWidth="118dp" />


        <EditText
            android:id="@+id/email_field_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/login_email_address"
            android:inputType="textEmailAddress"
            android:textColorHint="#78909C"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/password_field_label"
            app:layout_constraintTop_toTopOf="@+id/email_field_label"
            tools:layout_conversion_absoluteHeight="54dp"
            tools:layout_conversion_absoluteWidth="293dp" />

        <TextView
            android:id="@+id/password_field_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/password_field_label"
            android:textSize="25sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_field_label"
            app:layout_constraintEnd_toStartOf="@+id/password_edittext"
            tools:layout_conversion_absoluteHeight="34dp"
            tools:layout_conversion_absoluteWidth="114dp" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password_field_hint"
            android:inputType="textPassword"
            android:textColorHint="#78909C"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/password_field_label"
            app:layout_constraintTop_toTopOf="@+id/password_field_label"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:layout_conversion_absoluteHeight="54dp"
            tools:layout_conversion_absoluteWidth="298dp" />


        <Button
            android:id="@+id/login_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login_btn_text"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/signup_button"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_field_label"
            tools:layout_conversion_absoluteHeight="54dp"
            tools:layout_conversion_absoluteWidth="206dp" />

        <Button
            android:id="@+id/signup_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/signup_btn_text"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/login_button"
            app:layout_constraintTop_toTopOf="@+id/login_button"
            tools:layout_conversion_absoluteHeight="54dp"
            tools:layout_conversion_absoluteWidth="206dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
