<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstructionsFragment">


        <TextView
            android:id="@+id/textView3"
            style="@style/style_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login_screen_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- to set EditText non-edtable; set the following:
            android:cursorVisible="false"
            android:focusable="false"
            android:clickable="false"
        -->
        <EditText
            android:id="@+id/edittext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:clickable="false"
            android:cursorVisible="false"
            android:fadeScrollbars="false"
            android:focusable="false"
            android:importantForAutofill="no"
            android:inputType="none|textMultiLine"
            android:isScrollContainer="true"
            android:overScrollMode="never"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarSize="16dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="horizontal|vertical"
            android:scrollHorizontally="true"
            android:text="@string/instructions"
            android:textSize="@dimen/button_text_size"
            android:verticalScrollbarPosition="defaultPosition"
            app:layout_constraintBottom_toTopOf="@+id/instruction_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/instruction_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/instruction_button_text"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
